[package]
name = "serde_gdbmi"
description = "Serde deserializer for the GDB Machine Interface (GDB/MI) output."
version = "0.1.0"
edition = "2024"
repository = "https://github.com/oro-os/serde_gdbmi"
homepage = "https://github.com/oro-os/serde_gdbmi"
keywords = ["serde", "gdb", "machine", "interface", "mi", "parser"]
categories = [
    "development-tools::debugging",
    "parser-implementations",
]
authors = ["Joshua Lee Junon (https://github.com/qix-)"]
documentation = "https://docs.rs/serde_gdbmi"
readme = "README.md"
license = "MIT"

[dependencies]
serde = "1.0.228"
thiserror = "2.0.18"
unescape_zero_copy = "2.3.0"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }